--- a/gaming/lets-talk-about-dice/index.html
+++ b/gaming/lets-talk-about-dice/index.html
@@ -200,7 +200,7 @@
           <hr>
           <p>
             Article series  [<a href="http://rubentan.com/series/obsidian-world">Obsidian World</a>]
-            tagged  [<a href="http://rubentan.com/tags/design">Design</a>] [<a href="http://rubentan.com/tags/rpg">RPG</a>] [<a href="http://rubentan.com/tags/tabletop">Tabletop</a>] [<a href="http://rubentan.com/tags/dice">Dice</a>]
+            tagged  [<a href="http://rubentan.com/tags/game-design">Game Design</a>] [<a href="http://rubentan.com/tags/rpg">RPG</a>] [<a href="http://rubentan.com/tags/dice">Dice</a>]
           </p>
         </div>
       </div>
