--- a/life/emotional-sustenance/index.html
+++ b/life/emotional-sustenance/index.html
@@ -9,8 +9,8 @@
 <meta name="author" content="Ruben Tan">
 
     <base href="http://rubentan.com/">
-    <title>Tidying up dice mechanics</title>
-    <link rel="canonical" href="http://rubentan.com/gaming/tidying-up-dice-mechanics/">
+    <title>Emotional sustenance - Part 1</title>
+    <link rel="canonical" href="http://rubentan.com/life/emotional-sustenance/">
     <link href="" rel="alternate" type="application/rss+xml" title="Ruben Tan - my corner of the internet" />
 
     
@@ -68,56 +68,47 @@
 <div id="single">
   <div class="container">
     <div class="section-title text-center center">
-      <h2>Tidying up dice mechanics</h2>
-      <div class="col-md-12 text-center single-date">Posted on monday, 11 Jan 2017</div>
+      <h2>Emotional sustenance - Part 1</h2>
+      <div class="col-md-12 text-center single-date">Posted on monday, 1 Jan 0001</div>
     </div>
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <div class="content-text">
-           <p>After playtesting the <a href="/gaming/probability-check">last dice system</a>, several problems cropped up, which led to the new dice mechanic which I am <em>super</em> happy with.</p>
+           <p>In this post I am going to talk about emotional sustenance and how different people find satisfaction in different methods.</p>
 
 <p></p>
 
-<p>In the previous post, I evaluated the probability of a 3d6 pick high/middle/low system, and I thought that would be the perfect dice rules for <em>Obsidian World</em>. I was wrong. Playtesting proved me wrong.</p>
+<p>A while ago I went on an impromptu day escape with a friend, and on the drive back I had some quality time to ponder about life in general. The topic of emotional sustenance had since then stuck in my mind, and this post is mostly about the revelations I had in that short trip.</p>
 
-<p>It doesn&rsquo;t feel right, and picking one die from three feels a bit underwhelming. My players didn&rsquo;t comment much on the dice, but they did took some time to figure out which die to choose, given the situation and assorted modifiers.</p>
+<p>I find that emotional sustenance is something not many people talk about, despite it being just as important (if not more) as physical wellbeing. Perhaps the western world have a better grasp on this matter, here in south east asia it is mostly a subject that most would gladly ignore or avoid, even in close knit circles. Maybe I&rsquo;m projecting, and if I am, this post is a perfect reflection of myself that the future me will be glad to reminiscent one fine day.</p>
 
-<p>In short, even with 3d6 pick one, if feels a bit clunky in play. The other thing is, it doesn&rsquo;t actually <em>do</em> anything, other than giving 3 outcomes (miss, hit, crit). There&rsquo;s no tactical decision to be made on the dice, and there&rsquo;s not a lot of room nor depth to expand it through special rules like abilities and such.</p>
+<p>Different people find emotional sustenance in different ways. That much is certain. However, I&rsquo;ve noticed two very distinct, and perhaps mutually exclusive, manners in which people heal their souls. Here I classify them as <em>experience-oriented</em> and <em>connection-oriented</em>.</p>
 
-<h3 id="a-new-start">A New Start</h3>
+<h3 id="experience-oriented-sustenance">Experience Oriented Sustenance</h3>
 
-<p>So I ditched it and went back to the drawing board. I knew I wanted 3d6, so that has to stay. I knew I wanted roll and pick, so that had to stay. I knew I wanted degrees of success, so that has to stay. How to turn the dice system into something with a little bit more nuance than the current system?</p>
+<p>Experience-oriented people find emotional sustenance from the things they do and feel with a companion. To them, events, places and things experienced together is far more valuable. They seek a partner to make stories with, where their memories would be filled with people instead of just themselves.</p>
 
-<p>Epiphany.</p>
+<p>These kind of people would prefer to do things together with their companions. In fact, the activity itself <em>is</em> the topic of conversation. It can be going to a party together, heading to the movies, or going on a road trip. Heck, even people watching counts, since the topic revolves around the act of observing others, instead of getting to know each other better.</p>
 
-<p>I decided to do 2d6 instead. Here&rsquo;s how a basic dice roll works:</p>
+<h3 id="connection-oriented-sustenance">Connection Oriented Sustenance</h3>
 
-<ol>
-<li>Determine position (dominant, balanced, or desperate)</li>
-<li>Roll 3d6</li>
-<li>Dominant: add highest two + trait, success on 7+, lowest die is effect</li>
-<li>Balanced: add highest + lowest + trait, success on 7+, middle die is effect</li>
-<li>Desperate: add lowest two + trait, success on 7+, highest die is effect</li>
-<li>On success, check effect die score: 1-3 graze, 4-5 hit, 6 crit</li>
-</ol>
+<p>Connection-oriented people find emotional sustenance from connecting with their companion. To these people, a meet up is an exchange of views, ideologies or opinions. They either seek common ground, or contradictory perspectives relative to their own.</p>
 
-<p>Here&rsquo;s the fun part about this system: probability wise, if you are in a dominant position, unless you rolled really well, your effect is going to suck, since you&rsquo;re picking the lowest die as your effect. Conversely, if you are in a desperate position, should you succeed on the sum of two lowest die, it is easier for you to crit on your effect die, since it is the highest die of the three!</p>
+<p>These kind of people would rather sit, chill and talk, perhaps over a drink or meal. They feel happy when they walk away with a deeper understanding of the other person, and most of the time they develop intimate relationships with the people in their circle.</p>
 
-<p>So this means, the dice system adds a bit more tactical depth to your fictional positioning during play: when you get put in a desperate position, all is not lost! You can still win with a lucky hit. This means you actually get <em>stronger</em> when you are ground to dust.</p>
+<h3 id="it-s-a-spectrum">It&rsquo;s a spectrum</h3>
 
-<p>I am happy with this new mechanic because it portrays the themes of <em>Obsidian World</em> really well, where the game is supposed to be about sacrifice and hope in the eternal gloom.</p>
+<p>Of course, I&rsquo;m not saying that people are either one or the other. We switch between two different sustenance modes all the time. Some friends are there for experience-oriented sustenance, while others are there for connection-oriented sustenance.</p>
 
-<h3 id="moving-on">Moving On</h3>
+<p>I think by classifying it this way it makes it easier to recognise what kind of sustenance the other party needs, and adjust your expectations accordingly so both of you are in sync in what you want and are looking for.</p>
 
-<p>I&rsquo;m honestly done with the dice system. I like it. 2d6 and success on a 7+ gives me enough room to apply modifiers to it, and effect die working the way it does fits the design goals I have for this game.</p>
-
-<p>I can&rsquo;t wait to start fleshing out the other parts of the system. A slight preview: the next topic about the game system will be something I call <em>keys</em>. Stay tuned!</p>
+<p>Until next time, don&rsquo;t forget to feed your emotions!</p>
         </div>
         <div class="text-center center">
           <hr>
           <p>
-            Article series  [<a href="http://rubentan.com/series/obsidian-world">Obsidian World</a>]
-            tagged  [<a href="http://rubentan.com/tags/game-design">Game Design</a>] [<a href="http://rubentan.com/tags/rpg">RPG</a>] [<a href="http://rubentan.com/tags/dice">Dice</a>]
+            Article series  [<a href="http://rubentan.com/series/as-i-see-it">As I see it</a>]
+            tagged  [<a href="http://rubentan.com/tags/life">Life</a>]
           </p>
         </div>
       </div>
