--- a/gaming/obsidian-world-intro/index.html
+++ b/gaming/obsidian-world-intro/index.html
@@ -167,7 +167,7 @@
           <hr>
           <p>
             Article series  [<a href="http://rubentan.com/series/obsidian-world">Obsidian World</a>]
-            tagged  [<a href="http://rubentan.com/tags/design">Design</a>] [<a href="http://rubentan.com/tags/rpg">RPG</a>] [<a href="http://rubentan.com/tags/tabletop">Tabletop</a>] [<a href="http://rubentan.com/tags/worldbuilding">Worldbuilding</a>]
+            tagged  [<a href="http://rubentan.com/tags/game-design">Game Design</a>] [<a href="http://rubentan.com/tags/rpg">RPG</a>] [<a href="http://rubentan.com/tags/world">World</a>]
           </p>
         </div>
       </div>
